# python-project-template

./: LICENSE  README.md  init_setup.py  pyproject.toml
docker/: Dockerfile
src/service/: main.py
src/service/config/: logging.yaml  settings.py
src/service/utils/: __init__.py  logging.py
